[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/DoorAndButton.gd" type="Script" id=1]
[ext_resource path="res://TileSets/Wooden Block.png" type="Texture" id=2]
[ext_resource path="res://TileSets/Opened Wooden Block.png" type="Texture" id=3]
[ext_resource path="res://Audio/switch25.ogg" type="AudioStream" id=4]
[ext_resource path="res://Stuff/Button and Door/button pushed.png" type="Texture" id=5]
[ext_resource path="res://Stuff/Button and Door/button.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "opened",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 24 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "unpushed",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "pushed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 5 )

[node name="DoorAndButton" type="Node2D"]
script = ExtResource( 1 )

[node name="Door" type="StaticBody2D" parent="."]
position = Vector2( 32, 0 )

[node name="S1" type="AnimatedSprite" parent="Door"]
position = Vector2( 0, -16 )
frames = SubResource( 1 )
animation = "closed"

[node name="S2" type="AnimatedSprite" parent="Door"]
frames = SubResource( 1 )
animation = "closed"

[node name="S3" type="AnimatedSprite" parent="Door"]
position = Vector2( 0, 16 )
frames = SubResource( 1 )
animation = "closed"

[node name="DoorCollision" type="CollisionShape2D" parent="Door"]
visible = false
shape = SubResource( 2 )

[node name="Button" type="Area2D" parent="."]
position = Vector2( -16, 0 )

[node name="PushSound" type="AudioStreamPlayer2D" parent="Button"]
stream = ExtResource( 4 )

[node name="S1" type="AnimatedSprite" parent="Button"]
frames = SubResource( 3 )
animation = "unpushed"

[node name="ButtonCollision" type="CollisionShape2D" parent="Button"]
visible = false
position = Vector2( 0, 3 )
shape = SubResource( 4 )
[connection signal="body_entered" from="Button" to="." method="_on_Button_body_entered"]
